--- a/src/App.style.scss
+++ b/src/App.style.scss
@@ -9,6 +9,11 @@ body,
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: #131A22;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
