--- a/src/copmonents/Controls/Controls.module.scss
+++ b/src/copmonents/Controls/Controls.module.scss
@@ -1,3 +1,40 @@
 .container {
+  position: absolute;
 
+  bottom: 20px;
+  left: 20px;
+  right: 20px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  input, button {
+    outline:none;
+    padding: 10px;
+    margin: 0;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+
+    transition: .5s all;
+    box-shadow: 0 0 18px -10px rgb(0,0,0.75);
+  }
+
+  input:hover, button:hover {
+    transition: .5s all;
+    box-shadow: 0 0 5px -10px rgb(0,0,0.75);
+  }
+
+  input {
+    width: 70%;
+  }
+
+  button {
+    width: 20%;
+  }
+
+  button:disabled {
+    box-shadow: none;
+  }
 }
